removed INPUT and added MapSim.ini

--- a/MapSim.ini
+++ b/MapSim.ini
@@ -7,19 +7,19 @@
 !...FIELD_OF_VIEW_IN_DEGREES_BY_SIDE
 5.
 !...FILE_REDSHIFT_LIST_SNAP_A_AND_Z
-/home/cgiocoli/Codes/C++/MapSim/reshift_list.txt
+../reshift_list.txt
 !...FILE_SNAPSHOTS_AVAILABLE_SORTED_FROM_Z=0
-/home/cgiocoli/Codes/C++/MapSim/snaplist.txt
+../snaplist.txt
 !...PATH_WHERE_SNAPHOSTS_ARE_LOCATED
-/dati1/cgiocoli/CoDECS/LCDM/
+../
 !...SIMULATION_NAME
-LCDM_CoDECS
+LCDM-HS8_CoDECS
 !...NUMBER_OF_FILES_PER_SNAPSHOT
 64
 !..PATH_AND_FILE_NAME_OF_COMOVING_DISTANCES
-/home/cgiocoli/useful_data/dc_Baldi/LCDM_CoDECS-comovingdist.dat
+../LCDM_CoDECS-comovingdist.dat
 !...SUBFIND_PATH
-/dati1/cgiocoli/CoDECS/LCDM/
+../
 !...SEED_1
 2914
 !...SEED_2
@@ -28,5 +28,9 @@ LCDM_CoDECS
 1104
 !...PART_IN_PLANE
 ALL
+!...ONLY_SUBS_AND_FOF_NOSnap/=0
+1
+!...BUFFER_REGION_FOR_SUBS_AND_FOF_IN_DEGREES
+2.5
 
 
